Turning down the compile version